# rst-build

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
rust/: Cargo.toml  index.html
rust/src/: lib.rs
rust/src/libs/: createDxf.rs  drawItem.rs  getTransformedObject.rs  parse.rs  unification.rs  unification_data.rs
src/: App.tsx  index.html  main.tsx
src/components/: ChoosedPlaneItem.tsx  Choosedplanes.tsx  CreateUniqueItem.tsx  DownloadFile.tsx  EditMode.tsx  FilePng.tsx  SVG.tsx  SimpleThree.tsx  Three.tsx  UniqeItem.tsx  UniqeItems.tsx
src/components/custom-components/: Button.tsx  Checkbox.tsx  Input.tsx  Loader.tsx  Modal.tsx  Select.tsx
src/components/drawLine/: drawLine.ts
src/helpers/: fdgfdg.ts  getLayerColor.ts  getLayersMap.ts  getLinesVerticesArray.ts  getRandomColor.ts  loadDXF.ts  test-string.ts  transformLinesPointsIntoArray.ts  transformMainWDT_ToOrder_Z.ts
src/hooks/: useWorker.ts
src/store/: store.ts
src/store/slices/: slice.wasm.ts
src/store/slices/thunks/: wasmThanks.ts
src/types/: data.types.ts  file-saver.d.ts  types.ts
src/workers/: calculation.worker.ts  geometry.worker.ts
